[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlai_gen"
version = "0.0.1"
authors = [
  { name="Geoff Ladwig", email="gladwig@gladworx.com" },
  ]
  description = "Deeplearning.AI Generative Library"
  readme = "README.md"
  requires-python = ">=3.7"
  classifiers = [
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
      ]
dependencies = [
	     python = ">=3.8.1,<4.0",
	     openai = {version = "^0"}
	]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"


